--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
     .chart-wrap { height: 560px; }
     @media (max-width: 900px) { .chart-wrap { height: 520px; } }
     canvas.chart-canvas { width: 100% !important; height: 100% !important; display: block; }
+    @media (hover: none) and (pointer: coarse) {
+      label { width: 100%; }
+      select[multiple] {
+        min-width: 0;
+        width: 100%;
+        max-width: 100%;
+        height: 120px;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid #d9d9d9;
+        background: #f6f6f6;
+        -webkit-appearance: none;
+        appearance: none;
+      }
+    }
   </style>
 </head>
 <body>
