--- a/index.html
+++ b/index.html
@@ -29,20 +29,8 @@
     .chart-wrap { height: 560px; }
     @media (max-width: 900px) { .chart-wrap { height: 520px; } }
     canvas.chart-canvas { width: 100% !important; height: 100% !important; display: block; }
-    @media (hover: none) and (pointer: coarse) {
-      label { width: 100%; }
-      select[multiple] {
-        min-width: 0;
-        width: 100%;
-        max-width: 100%;
-        height: 120px;
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid #d9d9d9;
-        background: #f6f6f6;
-        -webkit-appearance: none;
-        appearance: none;
-      }
+    @media (max-width: 600px) {
+      select[multiple] { height: 120px; min-width: 0; width: 100%; }
     }
   </style>
 </head>
@@ -228,6 +216,25 @@
 
   function makeHBar(canvasId, labels, data, valueLabels) {
     const canvas = document.getElementById(canvasId);
+    const isMobile = window.matchMedia("(max-width: 600px)").matches;
+
+    function wrapLabel(label, maxLen) {
+      const words = String(label || "").split(/\s+/).filter(Boolean);
+      if (words.length <= 1) return label;
+      const lines = [];
+      let line = "";
+      for (const w of words) {
+        const next = line ? `${line} ${w}` : w;
+        if (next.length > maxLen && line) {
+          lines.push(line);
+          line = w;
+        } else {
+          line = next;
+        }
+      }
+      if (line) lines.push(line);
+      return lines.length > 1 ? lines : label;
+    }
 
     // Ensure container has a reasonable height; scale slightly with number of rows.
     const wrap = canvas.closest('.chart-wrap');
@@ -269,7 +276,11 @@
             grid: { display: false },
             ticks: {
               autoSkip: false,
-              font: { size: 13 }
+              font: { size: isMobile ? 12 : 13 },
+              callback: function(value) {
+                const label = this.getLabelForValue(value);
+                return isMobile ? wrapLabel(label, 14) : label;
+              }
             }
           }
         }
