further mobile aesthetics

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
     @media (max-width: 900px) { .chart-wrap { height: 520px; } }
     canvas.chart-canvas { width: 100% !important; height: 100% !important; display: block; }
     @media (max-width: 600px) {
-      select[multiple] { height: 120px; min-width: 0; width: 100%; }
+      select[multiple] {
+        height: 72px;
+        min-width: 0;
+        width: 100%;
+        padding: 4px 6px;
+        background: #fff;
+        border: 1px solid #e2e2e2;
+        border-radius: 8px;
+      }
     }
   </style>
 </head>
