--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     canvas.chart-canvas { width: 100% !important; height: 100% !important; display: block; }
     @media (max-width: 600px) {
       select[multiple] {
-        height: 72px;
+        height: 36px;
         min-width: 0;
         width: 100%;
-        padding: 4px 6px;
-        background: #fff;
-        border: 1px solid #e2e2e2;
-        border-radius: 8px;
+        padding: 2px 6px;
+        background: #f2f2f2;
+        border: 1px solid #d9d9d9;
+        border-radius: 10px;
       }
     }
   </style>
@@ -302,6 +302,9 @@
   async function loadSittings() {
     const sel = document.getElementById("sittingDates");
     sel.innerHTML = "";
+    if (window.matchMedia("(max-width: 600px)").matches) {
+      sel.size = 1;
+    }
 
     try {
       // Your DB has both list_sittings() and list_sittings(limit_n int).
